# pre-commit-to-rule-them-all

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .release-it.json  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: release.yaml  test.yaml  tests.yaml
docs/: ADD_NEW_PRE_COMMIT.md  DEVELOPMENT.md
pre_commit_to_rule_them_all/: pre-commit-hooks-rust.yaml  run_pre_commit_hooks_centralized.py
pre_commit_to_rule_them_all/configurations/: pre-commit-hooks-common.yaml  pre-commit-hooks-github-action-static-analysis.yaml  pre-commit-hooks-python.yaml  pre-commit-hooks-skills-check.yaml  pre-commit-hooks-skills-update.yaml  pre-commit-hooks-viteplus.yaml
tests/: test_run_pre_commit_hooks_centralized.py  test_run_pre_commit_hooks_centralized_test.py
