[project]
name = "pre_commit_to_rule_them_all"
description = "Project for centralized pre-commits hooks"
readme = "README.md"
version = "0.4.5"

  [project.urls]
  repository = "https://github.com/juancarlosjr97/pre-commit-to-rule-them_all"

  [project.scripts]
  centralized-pre-commit-hooks-python = "pre_commit_to_rule_them_all.run_pre_commit_hooks_centralized:use_pre_commit_hooks_python"
  centralized-pre-commit-hooks-rust = "pre_commit_to_rule_them_all.run_pre_commit_hooks_centralized:use_pre_commit_hooks_rust"

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

  [tool.setuptools.package-data]
  "*" = [ "*.yaml" ]

[tool.setuptools.packages.find]
include = [ "pre_commit_to_rule_them_all*" ]

[tool.coverage.run]
omit = [ "tests/*" ]
